# timeforge

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_all.txt  setup-venv.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release_to_pypi.yml
src/timeforge/: TODO.md  __main__ extensions.py  __main__.py  _extensions.py  _feiertage.py  config.py  core.py  curses_textfield.py  generation.py  gui.py  helpers.py  main_extensions.py  test.py  text_input.py  timeforge.py
